WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88905
[Qt] Save a JSGlobalContextRef instead of a JSContextRef in QtConnectionObject
https://bugs.webkit.org/show_bug.cgi?id=88905
Summary
[Qt] Save a JSGlobalContextRef instead of a JSContextRef in QtConnectionObject
Caio Marcelo de Oliveira Filho
Reported
2012-06-12 13:26:25 PDT
[Qt] Save a JSGlobalContextRef instead of a JSContextRef in QtConnectionObject
Attachments
Patch
(5.50 KB, patch)
2012-06-12 13:44 PDT
,
Caio Marcelo de Oliveira Filho
noam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Caio Marcelo de Oliveira Filho
Comment 1
2012-06-12 13:44:03 PDT
Created
attachment 147147
[details]
Patch
Caio Marcelo de Oliveira Filho
Comment 2
2012-06-13 06:12:01 PDT
Committed
r120195
: <
http://trac.webkit.org/changeset/120195
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug