[Qt] Save a JSGlobalContextRef instead of a JSContextRef in QtConnectionObject https://bugs.webkit.org/show_bug.cgi?id=88905

Make QtConnectionObject use JSContextGetGlobalContext and store the
JSGlobalContextRef. Previous code was working but saving JSContextRef was wrong in terms of
API.

There's an assumption that JSGlobalContextRef will outlive the connection objects, and
because of it no JSGlobalContextRetain/Release calls were added.

Reviewed by Noam Rosenthal.

* bridge/qt/qt_runtime.cpp:
(JSC::Bindings::QtRuntimeConnectionMethod::call):
(JSC::Bindings::QtConnectionObject::QtConnectionObject):
* bridge/qt/qt_runtime.h:
(QtConnectionObject):
* bridge/qt/qt_runtime_qt4.cpp:
(JSC::Bindings::QtRuntimeConnectionMethod::call):
(JSC::Bindings::QtConnectionObject::QtConnectionObject):

Canonical link: https://commits.webkit.org/106817@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120195 268f45cc-cd09-0410-ab3c-d52691b4dbfc