Source/WebCore/bridge/qt/qt_runtime.cpp
@@ -27,6 +27,7 @@
 #include "FunctionPrototype.h"
 #include "Interpreter.h"
 #include "JSArray.h"
+#include "JSContextRefPrivate.h"
 #include "JSDocument.h"
 #include "JSDOMBinding.h"
 #include "JSDOMWindow.h"
@@ -1636,8 +1637,7 @@ EncodedJSValue QtRuntimeConnectionMethod::call(ExecState* exec)
                 //  receiver function [from arguments]
                 //  receiver this object [from arguments]
 
-                ExecState* globalExec = exec->lexicalGlobalObject()->globalExec();
-                QtConnectionObject* conn = QtConnectionObject::createWithInternalJSC(globalExec, d->m_instance, signalIndex, thisObject, funcObject);
+                QtConnectionObject* conn = QtConnectionObject::createWithInternalJSC(exec, d->m_instance, signalIndex, thisObject, funcObject);
                 bool ok = QMetaObject::connect(sender, signalIndex, conn, conn->metaObject()->methodOffset());
                 if (!ok) {
                     delete conn;
@@ -1739,7 +1739,7 @@ JSValue QtRuntimeConnectionMethod::lengthGetter(ExecState*, JSValue, PropertyNam
 
 QtConnectionObject::QtConnectionObject(JSContextRef context, PassRefPtr<QtInstance> senderInstance, int signalIndex, JSObjectRef receiver, JSObjectRef receiverFunction)
     : QObject(senderInstance->getObject())
-    , m_context(context)
+    , m_context(JSContextGetGlobalContext(context))
     , m_senderInstance(senderInstance)
     , m_originalSender(m_senderInstance->getObject())
     , m_signalIndex(signalIndex)
