Source/WebCore/bridge/qt/qt_runtime.h
@@ -261,7 +261,7 @@ public:
     static QtConnectionObject* createWithInternalJSC(ExecState*, PassRefPtr<QtInstance> senderInstance, int signalIndex, JSObject* receiver, JSObject* receiverFunction);
 
 private:
-    JSContextRef m_context;
+    JSGlobalContextRef m_context;
     RefPtr<QtInstance> m_senderInstance;
 
     // We use this as key in active connections multimap.
